--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: #FFF;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -17,11 +17,13 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: #404040;
+  background: #FFF
+}
+
+
+h1 {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38.73px;
 }
